<resources>
    <string name="app_name">RailWatch</string>
    <string name="from_station_label">From</string>
    <string name="from_station_hint">KYN</string>
    <string name="to_station_label">To</string>
    <string name="to_station_hint">BRI</string>
    <string name="button_send">Send</string>
    <string name="message">[message]</string>
    <string name="refresh">Refresh</string>
    <string name="getting_times">Looking up train times…</string>
    <string name="choose_stations">Choose Stations</string>
    <string name="show_times">Show Times</string>
    <string name="create_schedule_intro">Create a schedule to check times between specified stations, between specified times.</string>
    <string name="schedule_start_label">Schedule start time</string>
    <string name="schedule_start_hint">09:00</string>
    <string name="schedule_end_label">Schedule end time</string>
    <string name="schedule_end_hint">13:00</string>
    <string name="days_label">Days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="from_to_arrow"><![CDATA[->]]></string>
</resources>
